# Gambit-Pairing

./: .envrc  .gitignore  .pre-commit-config.yaml  Gambit-Pairing.spec  LICENSE  README.md  build.sh  clean.py  clean.sh  commit.py  ensure-all-dependancies.sh  ensure_all_dependancies.sh  ensure_all_dependencies.py  format.py  format.sh  format_project.py  gambit-pairing-onedir.spec  gambit-pairing.spec  install.sh  install_editable_pip.py  install_editable_pip.sh  launch.sh  license.rtf  main.py  make_executable.py  make_executable.sh  make_installer.sh  make_msi.py  pyinstaller_common.py  pyproject.toml  requirements.txt  setup.cfg  setup.old  setup.py  styles.qss
.github/workflows/: build-release-windows.yml
core/: constants.py  pairing_dutch_swiss.py  pairing_round_robin.py  player.py  tournament.py  updater.py  utils.py
docs/: HACKING.md  before_you_commit.md  building-executable.md  building-wheel.md  git_commit_helper.md  installing.md  manual-pairing-guide.md  program-structure.md  project_formatting.md  running-no-install.md  virtual_environment_managment.md  windows_install.md
gambitpairing/: __main__.py
gambitpairing/core/: pairing_round_robin.py  player.py  updater.py  utils.py
gambitpairing/gui/: dialogs.py  mainwindow.py  printing.py
gui/: crosstable_tab.py  dialogs.py  history_tab.py  mainwindow.py  notification.py  players_tab.py  printing.py  standings_tab.py  tournament_tab.py  update_dialog.py  update_prompt_dialog.py  update_worker.py
licenses/: license.rtf
resources/scripts/: format_project.py
scr/: TournamentReporter.py  main.py
src/gambitpairing/: __init__.py  __main__.py  app.py  club.py  constants.py  tournament.py  type_hints.py
src/gambitpairing/core/: __init__.py  api_utils.py  constants.py  exceptions.py  old_tournament_file.py  pairing_dutch_swiss.py  pairing_round_robin.py  player.py  print_utils.py  tournament.py  update_worker.py  updater.py  utils.py
src/gambitpairing/core/pairing/: dutch_swiss.py  round_robin.py
src/gambitpairing/core/player/: __init__.py  base_player.py
src/gambitpairing/core/players/: base_player.py  fide_player.py
src/gambitpairing/core/update/: worker.py
src/gambitpairing/core/utils/: api.py  logging.py
src/gambitpairing/gui/: crosstable_tab.py  dialogs.py  history_tab.py  import_player.py  mainwindow.py  manual_pairing_dialog.py  notification.py  notournament_placeholder.py  players_tab.py  printing.py  standings_tab.py  tournament_tab.py  update_dialog.py  update_prompt_dialog.py  update_worker.py
src/gambitpairing/gui/dialogs/: __init__.py  about_dialog.py  manual_pair_dialog.py  manual_pairing_dialog.py  new_tournament_dialog.py  player_detail_dialog.py  player_edit_dialog.py  player_management_dialog.py  printing.py  settings_dialog.py  tournament_settings_dialoug.py  update_dialog.py  update_prompt_dialog.py
src/gambitpairing/gui/tabs/: __init__.py  crosstable_tab.py  history_tab.py  players_tab.py  standings_tab.py  tournament_tab.py
src/gambitpairing/pairing/: dutch_swiss.py  round_robin.py
src/gambitpairing/player/: __init__.py  base_player.py  fide_player.py
src/gambitpairing/resources/: resource_utils.py  styles.qss
src/gambitpairing/resources/scripts/: formatting.py
src/gambitpairing/test/: __init__.py  __main__.py
src/gambitpairing/test/core/: pairing_round_robin.py
src/gambitpairing/update/: __init__.py  updater.py
src/gambitpairing/utils/: __init__.py  api.py  logging.py  restart.py  utility_functions.py
test/: test_32_player_tournament
test_data/players/: test_16_rated_players.csv  test_45_rated_players.csv
test_data/tournaments/: test_32_player_tournament.json  test_open_2025.json  winter_chess_championship_2025.json
