[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gambit-pairing"
version = "0.6.1"
dependencies = [
    "PyQt6",
    "httpx",
    "importlib_resources; python_version<'3.9'",
    "packaging",
]
description = "Fast, fair, and modern tournament management. Open source and cross-platform."
readme = "README.md"
requires-python = ">= 3.8"
license = "GPL-3.0-or-later"
license-files = ["licenses/LICENSE", "licenses/license.rtf"]
authors = [{name = "Chickaboo", email="support@chickaboo.net"}, {name="Nic"}]
maintainers = [{name = "Chickaboo", email="support@chickaboo.net"}, {name="Nic"}]
keywords = ["Gambit", "Open", "Source", "Pairing", "Chess"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Operating System :: OS Independent"]

[project.urls]
Homepage = "https://www.chickaboo.net/gambit-pairing/"
Repository = "https://github.com/Chickaboo/gambit-pairing"
Issues = "https://github.com/Chickaboo/gambit-pairing/issues"

[project.optional-dependencies]
dev = [
  "build",
  "pyinstaller",
  "black",
  "pytest",
]

[project.gui-scripts]
gambit-pairing = "gambitpairing.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["gambitpairing*"]

[tool.setuptools.package-data]
"gambitpairing.resources" = ["styles.qss"]
"gambitpairing.resources.icons" = ["*.png", "*.ico", "*.webp", "*.svg"]

#  LocalWords:  importlib
