[metadata]
name = gambit-pairing
version = 0.4.1a0
author = Nic, Chickaboo
author_email = no_thanks@example.com, support@chickaboo.net
maintainer = Nic, Chickaboo
maintainer_email = sorry@example.com, support@chickaboo.net
description = Fast, fair, and modern tournament management. Open source and cross-platform.
long_description = file: README.md
long_description_content_type = text/markdown
license = "License :: OSI Approved :: MIT License"
keywords = Gambit, "Open Source", Pairing, Chess
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Operating System :: OS Independent

[options]
package_dir=
    =src
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    certifi==2025.7.14
    charset-normalizer==3.4.2
    idna==3.10
    networkx==3.5
    packaging==25.0
    PyQt6==6.9.1
    PyQt6-Qt6==6.9.1
    PyQt6_sip==13.10.2
    requests==2.32.4
    urllib3==2.5.0

[options.packages.find]
where=src

[options.package_data]
* = *.qss

[options.extras_require]
dev =
    build
    twine
    pytest

[options.entry_points]
gui_scripts =
    gambit-pairing = gambitpairing.app.py:main

[project_urls]
Homepage = https://www.chickaboo.net/gambit-pairing/
Repository = https://github.com/Chickaboo/gambit-pairing
Issues = https://github.com/Chickaboo/gambit-pairing/issues
